[package]
name = "blaulichtsms-hdmi-cec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-runtime = {git = "https://github.com/netwatching/project.netwatching.runtime", branch = "main"}
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.36.*", features = ["full"] }
crossbeam-channel = "0.5.*"
tracing-subscriber = "0.3.*"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.*"
clap_derive = "4.5.4"
clap = "4.5.4"
chrono = "0.4.37"

[target.'cfg(unix)'.dependencies]
openssl = {features = ["vendored"], version = "0.10"}